ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Authorization_Mode_Master__c/Bank_Authorization_Mode_Master__c.object-meta.xml
<CustomObject>
    <label>Bank Authorization Mode Master</label>
    <nameField>
        <displayFormat>BAM-{00000000}</displayFormat>
        <label>Bank Authorization Mode Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Authorization Mode Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>