ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Authorization_Mode_Master__c/fields/Authorization_Mode_Flag__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Mode_Flag__c</fullName>
    <label>Authorization Mode Flag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NetBanking</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>