ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Authorization_Mode_Master__c/fields/CAW_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>CAW_Bank_Name__c</fullName>
    <label>CAW Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>