ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Authorization_Mode_Master__c/fields/ENACH__c.field-meta.xml
<CustomField>
    <fullName>ENACH__c</fullName>
    <label>ENACH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>