ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Authorization_Mode_Master__c/fields/LOS_Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>LOS_Bank_Code__c</fullName>
    <label>LOS Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>