ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Authorization_Mode_Master__c/fields/Rep_Mode__c.field-meta.xml
<CustomField>
    <fullName>Rep_Mode__c</fullName>
    <label>Rep Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>