ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Authorization_Mode_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank_Name__c</columns>
    <columns>Bank_Code__c</columns>
    <columns>Active_Flag__c</columns>
    <columns>CAW_Bank_Code__c</columns>
    <columns>CAW_Bank_Id__c</columns>
    <columns>CAW_Bank_Name__c</columns>
    <columns>ENACH__c</columns>
    <columns>ENACH_DebitCard_Enabled__c</columns>
    <columns>ENACH_NetBanking_Enabled__c</columns>
    <columns>LOS_Bank_Code__c</columns>
    <columns>LOS_Bank_Name__c</columns>
    <columns>Rep_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>